Refactoring and added custom keyboard for instantCurrency command